--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title></title>
-    <script src="bar-chart.js"></script>
+    <title>Bar Chart Project</title>
+    <script type="text/javascript" src="jquery.js"></script>
+    <script type="text/javascript" src="bar-chart.js"></script>
     <link rel="stylesheet" href="styles.css">
   </head>
-  <body>
-
+  <body onload="drawBarChart([1,2,3,4,5],{},$('#root'))">
+    <div id="root"></div>
   </body>
 </html>
