--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <script type="text/javascript" src="bar-chart.js"></script>
     <link rel="stylesheet" href="styles.css">
   </head>
-  <body onload="drawBarChart([1,2,3,4],
-  {labels: ['apples','bananas','coconuts','durians']},
+  <body onload="drawBarChart([1,2,3,4,5,6],{},
   $('#root'))"
   >
     <div id="root"></div>
